examples/test/testpolicy3894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3894
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key42: value18
      key33: value44
      key16: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value31
          key29: value34
          key40: value28
      podSelector:
        matchLabels:
          key1: value15
